WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127047
[GTK][EFL][NIX] Do not use PrintContext, Frame and DocumentLoader in Errors
https://bugs.webkit.org/show_bug.cgi?id=127047
Summary
[GTK][EFL][NIX] Do not use PrintContext, Frame and DocumentLoader in Errors
Carlos Garcia Campos
Reported
2014-01-15 06:14:02 PST
It's a layering violation.
Attachments
Patch
(15.88 KB, patch)
2014-01-15 06:18 PST
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
Rebased
(15.88 KB, patch)
2014-01-15 09:35 PST
,
Carlos Garcia Campos
mrobinson
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2014-01-15 06:18:01 PST
Created
attachment 221264
[details]
Patch
Carlos Garcia Campos
Comment 2
2014-01-15 06:20:42 PST
hmm, this doesn't apply because I wrote it on top of patch attached to
bug #126979
Carlos Garcia Campos
Comment 3
2014-01-15 09:35:22 PST
Created
attachment 221278
[details]
Rebased
Sergio Villar Senin
Comment 4
2014-01-15 10:16:00 PST
Comment on
attachment 221278
[details]
Rebased The change looks really awesome
Carlos Garcia Campos
Comment 5
2014-01-15 23:33:42 PST
Committed
r162118
: <
http://trac.webkit.org/changeset/162118
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug