[GTK][EFL][NIX] Do not use PrintContext, Frame and DocumentLoader in Errors https://bugs.webkit.org/show_bug.cgi?id=127047

Reviewed by Martin Robinson.

Source/WebCore:

Using PrintContext, Frame and DocumentLoader in platform is a
layering violation.
Change printing error methods to receive a failing URL instead of
receiving a PrintContext that was used only to get the failing
URL.

* platform/efl/ErrorsEfl.cpp:
(WebCore::printError):
(WebCore::printerNotFoundError):
(WebCore::invalidPageRangeToPrint):
* platform/efl/ErrorsEfl.h:
* platform/gtk/ErrorsGtk.cpp:
(WebCore::printError):
(WebCore::printerNotFoundError):
(WebCore::invalidPageRangeToPrint):
* platform/gtk/ErrorsGtk.h:
* platform/nix/ErrorsNix.cpp:
(WebCore::printError):
(WebCore::printerNotFoundError):
(WebCore::invalidPageRangeToPrint):
* platform/nix/ErrorsNix.h:

Source/WebKit2:

* WebProcess/WebPage/gtk/WebPrintOperationGtk.cpp:
(WebKit::WebPrintOperationGtk::frameURL): Helper function to get
the URL of the frame being printed.
(WebKit::WebPrintOperationGtk::print): Use frameURL() as failing
URL for printing errors.
* WebProcess/WebPage/gtk/WebPrintOperationGtk.h:

Canonical link: https://commits.webkit.org/145091@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162118 268f45cc-cd09-0410-ab3c-d52691b4dbfc