Source/WebCore/platform/gtk/ErrorsGtk.h
@@ -24,10 +24,10 @@
 
 namespace WebCore {
 
-class PrintContext;
 class ResourceError;
 class ResourceRequest;
 class ResourceResponse;
+class URL;
 
 const char* const errorDomainNetwork = "WebKitNetworkError";
 const char* const errorDomainPolicy = "WebKitPolicyError";
@@ -83,9 +83,9 @@ ResourceError pluginWillHandleLoadError(const ResourceResponse&);
 ResourceError downloadNetworkError(const ResourceError&);
 ResourceError downloadCancelledByUserError(const ResourceResponse&);
 ResourceError downloadDestinationError(const ResourceResponse&, const String& errorMessage);
-ResourceError printError(const PrintContext*, const String& errorMessage);
-ResourceError printerNotFoundError(const PrintContext*);
-ResourceError invalidPageRangeToPrint(const PrintContext*);
+ResourceError printError(const URL& failingURL, const String& errorMessage);
+ResourceError printerNotFoundError(const URL& failingURL);
+ResourceError invalidPageRangeToPrint(const URL& failingURL);
 
 }
 
